--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "license": "MIT",
   "author": "Dm",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "4.17.1",
     "mongodb": "3.3.2",
     "mongoose": "5.7.1",
     "nodemon": "^2.0.19"
   },
-"scripts": {
+  "scripts": {
     "start": "nodemon server.js",
     "build": "cd client && npm install --legacy-peer-deps && npm run build",
     "test": "set NODE_ENV=test&& mocha \"./{,!(node_modules|client)/**/}*.test.js\""
