--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,10 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.54.9",
     "scss": "^0.2.4",
+    "shortid": "^2.2.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
