--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "nodemon": "^2.0.19"
   },
   "scripts": {
-    "start": "npm-run-all -l -p start:*",
-    "start:server": "nodemon server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "start": "nodemon server.js",
     "build": "cd client && npm install --legacy-peer-deps && npm run build",
     "test": "set NODE_ENV=test&& mocha \"./{,!(node_modules|client)/**/}*.test.js\""
   }
