--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
     "dotenv": "^16.0.2",
     "express": "4.17.1",
     "express-session": "^1.17.3",
-    "mongodb": "3.3.2",
+    "mongodb": "^4.10.0",
     "mongoose": "5.7.1",
     "multer": "1.4.4",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "path-browserify": "^1.0.1"
   },
   "scripts": {
     "start": "nodemon server.js",
     "build": "cd client && npm install --legacy-peer-deps && npm run build",
     "test": "set NODE_ENV=test&& mocha \"./{,!(node_modules|client)/**/}*.test.js\""
+  },
+  "browser": {
+  "fs": false,
+  "path": false,
+  "os": false
   }
 }
