--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^4.10.0",
     "mongoose": "5.7.1",
     "multer": "1.4.4",
+    "node": "^20.5.0",
     "nodemon": "^2.0.19",
     "path-browserify": "^1.0.1"
   },
@@ -23,8 +24,8 @@
     "test": "set NODE_ENV=test&& mocha \"./{,!(node_modules|client)/**/}*.test.js\""
   },
   "browser": {
-  "fs": false,
-  "path": false,
-  "os": false
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
